# aubionode

./: .gitignore  README.md
devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
devel/etc/catkin/profile.d/: 05.catkin-test-results.sh
devel/include/aubionode/: audioConstantsConfig.h
devel/lib/aubionode/: aubionode
devel/lib/pkgconfig/: Audionode.pc  aubionode.pc  audionode.pc
devel/share/Audionode/cmake/: AudionodeConfig.cmake
devel/share/aubionode/cmake/: aubionode-msg-paths.cmake  aubionodeConfig.cmake
devel/share/audionode/cmake/: audionodeConfig.cmake
qtcreator-build/: CMakeCache.txt  CTestTestfile.cmake  Makefile  Project.cbp  cmake_install.cmake
qtcreator-build/aubionode/: CTestTestfile.cmake  Makefile  aubionode.cbp  cmake_install.cmake
qtcreator-build/aubionode/catkin_generated/: package.cmake  pkg.develspace.context.pc.py  pkg.installspace.context.pc.py
qtcreator-build/aubionode/catkin_generated/installspace/: aubionode.pc  aubionodeConfig.cmake
qtcreator-build/catkin_generated/: generate_cached_setup.py  order_packages.cmake  order_packages.py  setup_cached.sh
qtcreator-build/devel/: .catkin  .rosinstall  setup.sh
qtcreator-build/devel/etc/catkin/profile.d/: 05.catkin-test-results.sh
qtcreator-build/devel/lib/aubionode/: aubionode
qtcreator-build/devel/lib/pkgconfig/: aubionode.pc
qtcreator-build/devel/share/aubionode/cmake/: aubionodeConfig.cmake
qtcreator-build/gtest/: CTestTestfile.cmake  Makefile  gtest.cbp
src/aubionode/: CMakeLists.txt  build-aubiolib.sh~  package.xml
src/aubionode/cfg/: audioConstants.cfg
src/aubionode/src/: main.cpp  main.cpp.autosave  oldMain.cpp  oldmain.cpp~
src/aubionode/src/aubio-lib/: build-aubiolib.sh  build-aubiolib.sh~
src/aubionode/src/rtaudio/: Makefile  build-rtaudio.sh  config.status  librtaudio.pc  librtaudio.so.4.1.1  rtaudio-config
src/aubionode/src/rtaudio/tests/: Makefile  audioprobe  duplex  playraw  playsaw  record  testall  teststops
